@@ -34,3 +34,4 @@ require 'gecoder/interface/constraints/int_enum/channel'
 require 'gecoder/interface/constraints/int_enum/element'
 require 'gecoder/interface/constraints/int_enum/count'
 require 'gecoder/interface/constraints/int_enum/sort'
+require 'gecoder/interface/constraints/int_enum/arithmetic'
